# uv-template

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  __main__.py  dev.Dockerfile  docker-compose.yml  mkdocs.yml  prod.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  compability.yml  compatibility.yml  python-package.yml
docker/: docker-entrypoint.sh
docs/: index.md  license.md  usage.md
docs/features/: commitizen.md  devcontainers.md  environment.md  index.md  makefile.md  mkdocs.md  pre-commit.md  python.md  uv.md
docs/features/ci/: github_actions.md
docs/features/code_quality/: mypy.md  pytest.md  ruff.md  vermin.md
docs/home/: index.md
docs/reference/: project_structure.md
docs/usage/: commands.md  index.md
src/config/: env.py
src/utils/logging/: config.py  setup.py
