[project]
name = "python-boilerplate"
version = "0.5.0"
description = "A template for quickly starting new projects in Python "
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "mkdocs>=1.6.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

# ================================= RUFF
[tool.ruff]
# Enable all rules that correspond to PEP 8

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    # "D",   # pydocstyle
    "UP",  # pyupgrade
    "I",   # isort
]

# Ignore some rules that may be too strict for general use

lint.ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
]

# Allow unused variables if they start with an underscore
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Line length according to PEP 8 - 79 characters
line-length = 79

# Target Python version
target-version = "py310"

exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

# Docstring handling
[tool.lint.pydocstyle]
convention = "google"  # Use Google convention for docstrings

# Settings for isort
[tool.lint.isort]
known-first-party = ["crypto-oracle"]  # Replace with your package name
known-third-party = []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# # Settings for pycodestyle
# [tool.lint.pycodestyle]
# max-doc-length = 72  # Maximum docstring line length according to PEP 8

# Additional formatting options
[tool.ruff.format]
quote-style = "double"  # Use double quotes
indent-style = "space"  # Use spaces for indentation
line-ending = "auto"    # Auto-detect line endings

# ================================= MYPY
[tool.mypy]
strict = true  # Enable strict type checking

# ================================= COMMITIZEN
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
